# torch_image_restoration

./: .gitignore  AGENTS.md  COMPLETION_REPORT.md  EXPERIMENTS_SUMMARY.md  FAST_FAIL_NOTES.md  INFRASTRUCTURE.md  Makefile  README.md  SETUP.md  TASK_COMPLETE.md  environment.yml  pyproject.toml  pyro.ai.ipynb  pyro.ai.py  pytorch_Hx.ipynb  pytorch_Hx.py  requirements.txt  utils.py  verify_setup.py
experiments/: AGENTS.md  QUICKSTART.md  README.md  __init__.py  config.yaml  create_issues.sh  create_issues_simple.sh  metrics.py  optimizers.py  runner.py  schedulers.py  sweep.py
hooks/: pre-push
results/: all_results.csv  optimizer_sweep_results.csv  rl_seeding_results.csv  scheduler_sweep_results.csv
scripts/: setup-hooks.sh  setup_experiments.sh  test_experiment.py
tests/: test_sanity.py
